Fix Problems With Tests
Oops slight mispell, also improved index.html.

--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <script type="module" src="../out/tools.js"></script>
+        <script>
+            let module;
+            import("../out/esmodule-tools.js").then(mod => module = mod);
+        </script>
 
         <title>Document</title>
     </head>
